--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+  <img src="img/logoC.jpg" alt="Logo CFE" class="logo-cfe">
   <div class="login-container">
     <h2>Inicio de Sesión</h2>
 
