--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </form>
 
     <div class="crear-cuenta">
-      <a href="cliente/cliente-registro.html">Crear nueva cuenta</a>
+      <a href="cliente-registro.html">Crear nueva cuenta</a>
     </div>
   </div>
 
