--- a/index.html
+++ b/index.html
@@ -1,56 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inicio de Sesión - CFE</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta charset="UTF-8">
+  <title>Iniciar Sesión - CFE</title>
+  <link rel="stylesheet" href="../css/styles.css">
+  <style>
+    #vanta-bg {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    body {
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
-  <img src="img/logoC.jpg" alt="Logo CFE" class="logo-cfe">
-  <div class="login-container">
-    <h2>Inicio de Sesión</h2>
+  <div id="vanta-bg"></div>
 
-    <form id="loginForm">
-      <label for="contrato">Número de contrato (correo electrónico):</label>
-      <input type="email" id="contrato" name="contrato" required />
+  <header class="encabezado">
+    <img src="../img/logo.png" alt="Logo CFE" class="logo-cfe">
+  </header>
 
-      <label for="contrasena">Contraseña:</label>
-      <input type="password" id="contrasena" name="contrasena" required />
-
-      <button type="submit" class="btn">Ingresar</button>
+  <main class="login-container">
+    <h2>Iniciar Sesión</h2>
+    <form id="formLogin">
+      <input type="email" id="correo" placeholder="Correo electrónico" required>
+      <input type="password" id="contrasena" placeholder="Contraseña" required>
+      <button type="submit" class="btn">Entrar</button>
     </form>
-
-    <div id="mensajeLogin" class="mensaje"></div>
-
     <div class="crear-cuenta">
-      <a href="cliente-registro.html">Crear nueva cuenta</a>
+      <p>¿No tienes cuenta? <a href="cliente-registro.html">Crear una cuenta</a></p>
     </div>
-  </div>
+  </main>
 
   <footer>
-    &copy; 2025 Sistema CFE | Todos los derechos reservados
+    <p>© 2025 Sistema CFE | Todos los derechos reservados</p>
   </footer>
 
+  <!-- Librerías para fondo animado -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <script>
-    document.getElementById("loginForm").addEventListener("submit", function (e) {
+    VANTA.GLOBE({
+      el: "#vanta-bg",
+      mouseControls: true,
+      touchControls: true,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x00ff99,
+      color2: 0x003f2f,
+      backgroundColor: 0x000000,
+      size: 1.2
+    });
+  </script>
+
+  <!-- Script para redirigir al cliente-inicio -->
+  <script>
+    document.getElementById("formLogin").addEventListener("submit", function (e) {
       e.preventDefault();
+      
+      const correo = document.getElementById("correo").value.trim();
+      const contrasena = document.getElementById("contrasena").value.trim();
 
-      const contrato = document.getElementById("contrato").value.trim();
-      const contrasena = document.getElementById("contrasena").value;
-
-      const clientes = JSON.parse(localStorage.getItem("clientes")) || [];
-
-      const cliente = clientes.find(c => c.correo === contrato);
-
-      if (cliente && cliente.password === contrasena) {
-        localStorage.setItem("clienteActivo", JSON.stringify(cliente));
+      if (correo !== "" && contrasena !== "") {
+        // Aquí simulamos el login exitoso
         window.location.href = "cliente-inicio.html";
       } else {
-        document.getElementById("mensajeLogin").textContent = "Correo o contraseña incorrectos.";
+        alert("Por favor completa ambos campos.");
       }
     });
   </script>
 </body>
 </html>
-
