--- a/cliente-registro.html
+++ b/cliente-registro.html
@@ -4,8 +4,35 @@
   <meta charset="UTF-8">
   <title>Registro de Cliente</title>
   <link rel="stylesheet" href="../css/styles.css">
+  <style>
+    #background {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      top: 0;
+      left: 0;
+    }
+
+    body {
+      overflow-y: auto;
+      position: relative;
+    }
+
+    .form-container {
+      position: relative;
+      z-index: 1;
+    }
+
+    header.encabezado {
+      position: relative;
+      z-index: 2;
+    }
+  </style>
 </head>
 <body class="registro-cliente">
+  <div id="background"></div>
+
   <header class="encabezado">
     <img src="../img/logo.png" alt="Logo CFE" class="logo-cfe">
   </header>
@@ -14,17 +41,19 @@
     <h1>Registro de Cliente</h1>
     <form id="formRegistroCliente">
       <h3>Nombre completo</h3>
-      <input type="text" id="nombre" placeholder="Nombre" required>
-      <input type="text" id="apellidoPaterno" placeholder="Apellido paterno" required>
-      <input type="text" id="apellidoMaterno" placeholder="Apellido materno" required>
+      <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
+      <input type="text" id="apellidoPaterno" name="apellidoPaterno" placeholder="Apellido paterno" required>
+      <input type="text" id="apellidoMaterno" name="apellidoMaterno" placeholder="Apellido materno" required>
 
       <h3>Dirección</h3>
-      <input type="text" id="calle" placeholder="Calle" required>
-      <input type="text" id="ciudad" placeholder="Ciudad" required>
-      <input type="text" id="cp" placeholder="Código Postal" required>
+      <input type="text" id="calle" name="calle" placeholder="Calle" required>
+      <input type="text" id="numero" name="numero" placeholder="Número" required>
+      <input type="text" id="colonia" name="colonia" placeholder="Colonia" required>
+      <input type="text" id="ciudad" name="ciudad" placeholder="Ciudad" required>
+      <input type="text" id="cp" name="cp" placeholder="Código Postal" required>
 
       <label for="estado">Estado:</label>
-      <select id="estado" required>
+      <select id="estado" name="estado" required>
         <option value="">--Selecciona un estado--</option>
         <option>Aguascalientes</option>
         <option>Baja California</option>
@@ -61,21 +90,24 @@
       </select>
 
       <label for="curp">CURP:</label>
-      <input type="text" id="curp" required>
+      <input type="text" id="curp" name="curp" required>
+
+      <label for="telefono">Teléfono:</label>
+      <input type="text" id="telefono" name="telefono" required>
 
       <label for="correo">Correo electrónico:</label>
-      <input type="email" id="correo" required>
+      <input type="email" id="correo" name="correo" required>
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" required>
+      <input type="password" id="password" name="password" autocomplete="new-password" required>
 
       <label for="confirmar">Confirma tu contraseña:</label>
-      <input type="password" id="confirmar" required>
+      <input type="password" id="confirmar" name="confirmar" autocomplete="new-password" required>
 
       <h3>Fecha de nacimiento</h3>
-      <input type="number" id="dia" min="1" max="31" placeholder="Día" required>
-      <input type="number" id="mes" min="1" max="12" placeholder="Mes" required>
-      <input type="number" id="anio" min="1900" max="2025" placeholder="Año" required>
+      <input type="number" id="dia" name="dia" min="1" max="31" placeholder="Día" required>
+      <input type="number" id="mes" name="mes" min="1" max="12" placeholder="Mes" required>
+      <input type="number" id="anio" name="anio" min="1900" max="2025" placeholder="Año" required>
 
       <button type="submit" class="btn">Registrarse</button>
     </form>
@@ -91,61 +123,23 @@
     <p>© 2025 Sistema CFE | Todos los derechos reservados</p>
   </footer>
 
+  <!-- Librerías fondo animado (Net) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
   <script>
-    document.getElementById("formRegistroCliente").addEventListener("submit", function(e) {
-      e.preventDefault();
-
-      const nombre = document.getElementById("nombre").value.trim();
-      const apellidoPaterno = document.getElementById("apellidoPaterno").value.trim();
-      const apellidoMaterno = document.getElementById("apellidoMaterno").value.trim();
-      const calle = document.getElementById("calle").value.trim();
-      const ciudad = document.getElementById("ciudad").value.trim();
-      const cp = document.getElementById("cp").value.trim();
-      const estado = document.getElementById("estado").value;
-      const curp = document.getElementById("curp").value.trim();
-      const correo = document.getElementById("correo").value.trim();
-      const password = document.getElementById("password").value;
-      const confirmar = document.getElementById("confirmar").value;
-      const dia = document.getElementById("dia").value;
-      const mes = document.getElementById("mes").value;
-      const anio = document.getElementById("anio").value;
-
-      if (password !== confirmar) {
-        document.getElementById("mensaje").textContent = "Las contraseñas no coinciden.";
-        return;
-      }
-
-      const clientes = JSON.parse(localStorage.getItem("clientes")) || [];
-      const existe = clientes.some(c => c.correo === correo);
-
-      if (existe) {
-        document.getElementById("mensaje").textContent = "Este correo ya está registrado.";
-        return;
-      }
-
-      const nuevoCliente = {
-        nombreCompleto: `${nombre} ${apellidoPaterno} ${apellidoMaterno}`,
-        direccion: {
-          calle,
-          ciudad,
-          cp,
-          estado
-        },
-        curp,
-        correo,
-        password,
-        fechaNacimiento: `${dia.padStart(2, '0')}/${mes.padStart(2, '0')}/${anio}`
-      };
-
-      clientes.push(nuevoCliente);
-      localStorage.setItem("clientes", JSON.stringify(clientes));
-
-      document.getElementById("mensaje").textContent = "✅ Registro exitoso. Redirigiendo...";
-      this.reset();
-
-      setTimeout(() => {
-        window.location.href = "../index.html"; // Redirige al login
-      }, 2500);
+    VANTA.NET({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x00ff99,
+      backgroundColor: 0x001d1d,
+      points: 12.0,
+      maxDistance: 20.0,
+      spacing: 16.0
     });
   </script>
 </body>
