--- a/cliente-registro.html
+++ b/cliente-registro.html
@@ -136,7 +136,7 @@
       scale: 1.00,
       scaleMobile: 1.00,
       color: 0x00ff99,
-      backgroundColor: 0x001d1d,
+      backgroundColor: 0x000000,
       points: 12.0,
       maxDistance: 20.0,
       spacing: 16.0
