--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iniciar Sesión - CFE</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     #vanta-bg {
       width: 100%;
@@ -23,16 +23,16 @@
   <div id="vanta-bg"></div>
 
   <header class="encabezado">
-    <img src="../img/logo.png" alt="Logo CFE" class="logo-cfe">
+    <img src="/cfe/img/logo.png" alt="Logo CFE" class="logo-cfe">
   </header>
 
   <main class="login-container">
     <h2>Iniciar Sesión</h2>
-    <form id="formLogin">
-      <input type="email" id="correo" placeholder="Correo electrónico" required>
-      <input type="password" id="contrasena" placeholder="Contraseña" required>
-      <button type="submit" class="btn">Entrar</button>
-    </form>
+    <form id="formLogin" method="POST" action="php/login.php">
+  <input type="email" id="correo" name="correo" placeholder="Correo electrónico" required>
+  <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
+  <button type="submit" class="btn">Entrar</button>
+</form>
     <div class="crear-cuenta">
       <p>¿No tienes cuenta? <a href="cliente-registro.html">Crear una cuenta</a></p>
     </div>
