--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <style>
     #vanta-bg {
       width: 100%;
-      height: 100%;
-      position: fixed;
+      height: 100%;      position: fixed;
       top: 0;
       left: 0;
       z-index: -1;
@@ -23,7 +22,7 @@
   <div id="vanta-bg"></div>
 
   <header class="encabezado">
-    <img src="/cfe/img/logo.png" alt="Logo CFE" class="logo-cfe">
+    <img src="/img/logo.png" alt="Logo CFE" class="logo-cfe">
   </header>
 
   <main class="login-container">
