--- a/cliente-registro.html
+++ b/cliente-registro.html
@@ -115,7 +115,7 @@
     <div id="mensaje" class="mensaje"></div>
 
     <div class="volver-inicio">
-      <a href="/cfe/index.html" class="btn-regresar">← Regresar al inicio</a>
+      <a href="/index.html" class="btn-regresar">← Regresar al inicio</a>
     </div>
   </main>
 
