--- a/cliente-inicio.html
+++ b/cliente-inicio.html
@@ -69,6 +69,11 @@
     window.location.href = "cliente-login.html";
   }
 </script>
+<script>
+  function cerrarSesion() {
+    window.location.href = "index.html"; // o "login.html" según tu archivo real
+  }
+</script>
 
 </body>
 </html>
