--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iniciar Sesión - CFE</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
   <style>
-    #vanta-bg {
-      width: 100%;
-      height: 100%;      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
+    #vanta-bg{
+      width:100%;height:100%;
+      position:fixed;top:0;left:0;z-index:-1;
     }
-
-    body {
-      overflow: hidden;
-    }
+    body{overflow:hidden;}
   </style>
 </head>
 <body>
   <div id="vanta-bg"></div>
 
   <header class="encabezado">
-    <img src="/img/logo.png" alt="Logo CFE" class="logo-cfe">
+    <img src="img/logo.png" alt="Logo CFE" class="logo-cfe" />
   </header>
 
+  <!-- Contenedor login -->
   <main class="login-container">
     <h2>Iniciar Sesión</h2>
-    <form id="formLogin" method="POST" action="php/login.php">
-  <input type="email" id="correo" name="correo" placeholder="Correo electrónico" required>
-  <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
-  <button type="submit" class="btn">Entrar</button>
-</form>
+
+    <!--  IMPORTANTÍSIMO: action y method  -->
+    <form id="formLogin" action="php/login.php" method="POST">
+      <input type="email" name="correo"    placeholder="Correo electrónico" required />
+      <input type="password" name="contrasena" placeholder="Contraseña" required />
+      <button type="submit" class="btn">Entrar</button>
+    </form>
+
     <div class="crear-cuenta">
       <p>¿No tienes cuenta? <a href="cliente-registro.html">Crear una cuenta</a></p>
     </div>
@@ -41,40 +40,24 @@
     <p>© 2025 Sistema CFE | Todos los derechos reservados</p>
   </footer>
 
-  <!-- Librerías para fondo animado -->
+  <!-- Vanta Globe -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <script>
     VANTA.GLOBE({
-      el: "#vanta-bg",
-      mouseControls: true,
-      touchControls: true,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      color: 0x00ff99,
-      color2: 0x003f2f,
-      backgroundColor: 0x000000,
-      size: 1.2
+      el:"#vanta-bg",
+      mouseControls:true, touchControls:true,
+      minHeight:200, minWidth:200,
+      color:0x00ff99, color2:0x003f2f,
+      backgroundColor:0x000000, size:1.2
     });
   </script>
-
-  <!-- Script para redirigir al cliente-inicio -->
   <script>
-    document.getElementById("formLogin").addEventListener("submit", function (e) {
-      e.preventDefault();
-      
-      const correo = document.getElementById("correo").value.trim();
-      const contrasena = document.getElementById("contrasena").value.trim();
-
-      if (correo !== "" && contrasena !== "") {
-        // Aquí simulamos el login exitoso
-        window.location.href = "cliente-inicio.html";
-      } else {
-        alert("Por favor completa ambos campos.");
-      }
-    });
-  </script>
+  // Mostrar alerta si llega ?error=1
+  const params = new URLSearchParams(window.location.search);
+  if (params.get("error") === "1") {
+    alert("Correo o contraseña incorrectos.");
+  }
+</script>
 </body>
 </html>
