--- a/cliente-registro.html
+++ b/cliente-registro.html
@@ -1,146 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro de Cliente</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <style>
-    #background {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      top: 0;
-      left: 0;
-    }
-
-    body {
-      overflow-y: auto;
-      position: relative;
-    }
-
-    .form-container {
-      position: relative;
-      z-index: 1;
-    }
-
-    header.encabezado {
-      position: relative;
-      z-index: 2;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body class="registro-cliente">
   <div id="background"></div>
 
   <header class="encabezado">
-    <img src="/cfe/img/logo.png" alt="Logo CFE" class="logo-cfe">
+    <img src="img/logo.png" alt="Logo CFE" class="logo-cfe" />
   </header>
 
   <main class="form-container">
     <h1>Registro de Cliente</h1>
-    <form id="formRegistroCliente" method="POST" action="php/registro.php">
+
+    <!--  IMPORTANTÍSIMO: action y method -->
+    <form id="formRegistroCliente" action="php/registro.php" method="POST">
+
       <h3>Nombre completo</h3>
-      <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
-      <input type="text" id="apellidoPaterno" name="apellidoPaterno" placeholder="Apellido paterno" required>
-      <input type="text" id="apellidoMaterno" name="apellidoMaterno" placeholder="Apellido materno" required>
+      <input type="text" name="nombre"          placeholder="Nombre"           required />
+      <input type="text" name="apellidoPaterno" placeholder="Apellido paterno" required />
+      <input type="text" name="apellidoMaterno" placeholder="Apellido materno" required />
 
       <h3>Dirección</h3>
-      <input type="text" id="calle" name="calle" placeholder="Calle" required>
-      <input type="text" id="numero" name="numero" placeholder="Número" required>
-      <input type="text" id="colonia" name="colonia" placeholder="Colonia" required>
-      <input type="text" id="ciudad" name="ciudad" placeholder="Ciudad" required>
-      <input type="text" id="cp" name="cp" placeholder="Código Postal" required>
+      <input type="text" name="calle"   placeholder="Calle"   required />
+      <input type="text" name="numero"  placeholder="Número"  required />
+      <input type="text" name="colonia" placeholder="Colonia" required />
+      <input type="text" name="ciudad"  placeholder="Ciudad"  required />
+      <input type="text" name="cp"      placeholder="Código Postal" required />
 
       <label for="estado">Estado:</label>
-      <select id="estado" name="estado" required>
+      <select name="estado" id="estado" required>
         <option value="">--Selecciona un estado--</option>
-        <option>Aguascalientes</option>
-        <option>Baja California</option>
-        <option>Baja California Sur</option>
-        <option>Campeche</option>
-        <option>Chiapas</option>
-        <option>Chihuahua</option>
-        <option>Ciudad de México</option>
-        <option>Coahuila</option>
-        <option>Colima</option>
-        <option>Durango</option>
-        <option>Estado de México</option>
-        <option>Guanajuato</option>
-        <option>Guerrero</option>
-        <option>Hidalgo</option>
+        <option>CDMX</option>
         <option>Jalisco</option>
-        <option>Michoacán</option>
-        <option>Morelos</option>
-        <option>Nayarit</option>
         <option>Nuevo León</option>
-        <option>Oaxaca</option>
-        <option>Puebla</option>
-        <option>Querétaro</option>
-        <option>Quintana Roo</option>
-        <option>San Luis Potosí</option>
-        <option>Sinaloa</option>
-        <option>Sonora</option>
-        <option>Tabasco</option>
-        <option>Tamaulipas</option>
-        <option>Tlaxcala</option>
         <option>Veracruz</option>
         <option>Yucatán</option>
-        <option>Zacatecas</option>
       </select>
 
       <label for="curp">CURP:</label>
-      <input type="text" id="curp" name="curp" required>
+      <input type="text" name="curp" id="curp" required />
 
       <label for="telefono">Teléfono:</label>
-      <input type="text" id="telefono" name="telefono" required>
+      <input type="text" name="telefono" id="telefono" required />
 
       <label for="correo">Correo electrónico:</label>
-      <input type="email" id="correo" name="correo" required>
+      <input type="email" name="correo" id="correo" required />
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" autocomplete="new-password" required>
+      <input type="password" name="password" id="password" required />
 
       <label for="confirmar">Confirma tu contraseña:</label>
-      <input type="password" id="confirmar" name="confirmar" autocomplete="new-password" required>
+      <input type="password" name="confirmar" id="confirmar" required />
 
       <h3>Fecha de nacimiento</h3>
-      <input type="number" id="dia" name="dia" min="1" max="31" placeholder="Día" required>
-      <input type="number" id="mes" name="mes" min="1" max="12" placeholder="Mes" required>
-      <input type="number" id="anio" name="anio" min="1900" max="2025" placeholder="Año" required>
+      <input type="number" name="dia"  placeholder="Día"  min="1"  max="31"  required />
+      <input type="number" name="mes"  placeholder="Mes"  min="1"  max="12"  required />
+      <input type="number" name="anio" placeholder="Año"  min="1900" max="2025" required />
 
       <button type="submit" class="btn">Registrarse</button>
     </form>
-
-    <div id="mensaje" class="mensaje"></div>
-
-    <div class="volver-inicio">
-      <a href="/index.html" class="btn-regresar">← Regresar al inicio</a>
-    </div>
   </main>
 
   <footer>
     <p>© 2025 Sistema CFE | Todos los derechos reservados</p>
   </footer>
 
-  <!-- Librerías fondo animado (Net) -->
+  <!-- Fondo animado (opcional) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
   <script>
     VANTA.NET({
       el: "#background",
-      mouseControls: true,
-      touchControls: true,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      color: 0x00ff99,
-      backgroundColor: 0x000000,
-      points: 12.0,
-      maxDistance: 20.0,
-      spacing: 16.0
+      mouseControls: true, touchControls: true,
+      minHeight: 200, minWidth: 200,
+      color: 0x00ff99, backgroundColor: 0x000000,
+      points: 12, maxDistance: 20, spacing: 16
     });
   </script>
+
+  <!--  Se ELIMINA el JavaScript que usaba localStorage -->
 </body>
 </html>
